force-app/main/default/objects/RD_SizeList__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>