force-app/main/default/objects/RD_SizeList__c/fields/Desc__c.field-meta.xml
<CustomField>
    <fullName>Desc__c</fullName>
    <label>Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>