force-app/main/default/objects/RD_SizeList__c/fields/DescIND__c.field-meta.xml
<CustomField>
    <fullName>DescIND__c</fullName>
    <label>DescIND</label>
    <length>255</length>
    <type>Text</type>
</CustomField>