force-app/main/default/objects/RD_SizeList__c/fields/DescMMA__c.field-meta.xml
<CustomField>
    <fullName>DescMMA__c</fullName>
    <label>DescMMA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>