force-app/main/default/objects/RD_SizeList__c/fields/DescMMD__c.field-meta.xml
<CustomField>
    <fullName>DescMMD__c</fullName>
    <label>DescMMD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>