force-app/main/default/objects/RD_SizeList__c/fields/mmDesc__c.field-meta.xml
<CustomField>
    <fullName>mmDesc__c</fullName>
    <label>mmDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>