force-app/main/default/objects/RD_SizeList__c/fields/SizeValue__c.field-meta.xml
<CustomField>
    <fullName>SizeValue__c</fullName>
    <label>SizeValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>