force-app/main/default/objects/RD_SizeList__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Desc__c</columns>
    <columns>SizeValue__c</columns>
    <columns>code__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>